Guard the specialized SAM return type against module-export and declaration-order gaps